leitura de dados brutos json

--- a/Ciência de Dados/Pandas/data_manipu.ipynb
+++ b/Ciência de Dados/Pandas/data_manipu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 96,
    "id": "b7242db9",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 97,
    "id": "ce0583b4",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 98,
    "id": "f3c24b23",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
        "4  {'avaliacao_geral': '10.0', 'experiencia_local..."
       ]
      },
-     "execution_count": 209,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 99,
    "id": "3f7236b4",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "[70 rows x 13 columns]"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 100,
    "id": "2afc3689",
    "metadata": {},
    "outputs": [],
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 101,
    "id": "78314015",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
        "4  [R$ 314,24, R$ 311,15, R$ 899,16, R$ 885,24]  "
       ]
      },
-     "execution_count": 212,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 102,
    "id": "b6b9ca90",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
        " 'preco']"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 103,
    "id": "2c75d34a",
    "metadata": {},
    "outputs": [
@@ -933,7 +933,7 @@
        "[3818 rows x 13 columns]"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 104,
    "id": "863e7d88",
    "metadata": {},
    "outputs": [],
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 105,
    "id": "5ca992f3",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1259,7 @@
        "[3818 rows x 13 columns]"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 106,
    "id": "2485ac22",
    "metadata": {},
    "outputs": [],
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 107,
    "id": "624775ea",
    "metadata": {},
    "outputs": [
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 108,
    "id": "e2d89187",
    "metadata": {},
    "outputs": [],
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 109,
    "id": "996f2fde",
    "metadata": {},
    "outputs": [
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 110,
    "id": "af4bc53d",
    "metadata": {},
    "outputs": [],
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 111,
    "id": "bd4dcf50",
    "metadata": {},
    "outputs": [
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 112,
    "id": "a1a9763b",
    "metadata": {},
    "outputs": [
@@ -1435,7 +1435,7 @@
        "Name: preco, Length: 3818, dtype: float64"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 113,
    "id": "b07c6b3f",
    "metadata": {},
    "outputs": [
@@ -1480,7 +1480,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\raphael.gaias.TACLA\\AppData\\Local\\Temp\\ipykernel_15432\\1676190389.py:1: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "C:\\Users\\raphael.gaias.TACLA\\AppData\\Local\\Temp\\ipykernel_3116\\1676190389.py:1: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  hospedagem[['taxa_deposito','taxa_limpeza']] = hospedagem[['taxa_deposito','taxa_limpeza']].applymap(lambda x: x.replace('$','').replace(',','').strip()).astype(np.float64)\n"
      ]
     }
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 114,
    "id": "9d64a431",
    "metadata": {},
    "outputs": [
@@ -1679,7 +1679,7 @@
        "19    10/06/2022   Thiago fritzz 883       R$ 885,24"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 115,
    "id": "2bd6c394",
    "metadata": {},
    "outputs": [
@@ -1870,7 +1870,7 @@
        "19    10/06/2022   Thiago fritzz 883           885.24"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1898,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 116,
    "id": "42cd414b",
    "metadata": {},
    "outputs": [],
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 117,
    "id": "3bc0d89e",
    "metadata": {},
    "outputs": [],
@@ -1918,7 +1918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 118,
    "id": "ed6e03eb",
    "metadata": {},
    "outputs": [],
@@ -1928,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 119,
    "id": "68424fc7",
    "metadata": {},
    "outputs": [],
@@ -1938,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 120,
    "id": "93661fd2",
    "metadata": {},
    "outputs": [
@@ -1959,7 +1959,7 @@
        "Name: descricao_local, Length: 3818, dtype: object"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 121,
    "id": "7cc1e227",
    "metadata": {},
    "outputs": [],
@@ -1980,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 122,
    "id": "d9a91ca8",
    "metadata": {},
    "outputs": [
@@ -2001,7 +2001,7 @@
        "Name: comodidades, Length: 3818, dtype: object"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 123,
    "id": "d0cd05d1",
    "metadata": {},
    "outputs": [
@@ -2023,7 +2023,7 @@
        "'This neighborhood is residential yet close to golfing, skate park, tennis courts and a large urban park for walking. Bus and Light Rail within walking distance, I-5 and I-90 is within minutes. Beacon Hill is the most diverse in Seattle and if you listen you will see and hear people from all around the globe. It is quiet at night and it is as safe. However you have to be aware of your surroundings as in all cities. Beacon Hill is NOT right next to downtown. It is a neighborhood to the south of the city. It is a 20 minute bus ride to the downtown core, a 8 to 10 minute train ride to the downtown core. It is out of the fray but still very much a part of Seattle. It is a growing and changing neighborhood which is kinda nice. It is less \"slick\" and a lot more funky than the more \"developed\" parts of Seattle. This is not walking distance to downtown...you can but it will take 50 minutes.  Please look at the map and judge this distance for yourself so you can determine if this is going to wor'"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2034,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 124,
    "id": "3d087b84",
    "metadata": {},
    "outputs": [
@@ -2055,7 +2055,7 @@
        "Name: descricao_vizinhanca, Length: 3818, dtype: object"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2071,7 +2071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 125,
    "id": "d82adcaf",
    "metadata": {},
    "outputs": [
@@ -2079,7 +2079,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data e hora atual: 2026-01-29 10:17:51.911615 2026-01-29\n"
+      "Data e hora atual: 2026-01-30 08:21:12.851101 2026-01-30\n"
      ]
     }
    ],
@@ -2103,7 +2103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 126,
    "id": "a41dbe8f",
    "metadata": {},
    "outputs": [
@@ -2183,7 +2183,7 @@
        "4  857  2016-01-08            False  None"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2195,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 127,
    "id": "456239c6",
    "metadata": {},
    "outputs": [],
@@ -2205,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 128,
    "id": "2438dc5a",
    "metadata": {},
    "outputs": [],
@@ -2215,7 +2215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 129,
    "id": "0f73a7fe",
    "metadata": {},
    "outputs": [
@@ -2295,7 +2295,7 @@
        "4  857  2016-01            False  None"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2306,17 +2306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 130,
    "id": "d41591f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "disponivel_por_mes = moveis_disponiveis[['data', 'vaga_disponivel']].query ('vaga_disponivel == True')"
+    "disponivel_por_mes = moveis_disponiveis.groupby(moveis_disponiveis['data'])[['vaga_disponivel']].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 131,
    "id": "1264cf5e",
    "metadata": {},
    "outputs": [
@@ -2341,89 +2341,89 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>data</th>\n",
        "      <th>vaga_disponivel</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>data</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>2016-02</td>\n",
-       "      <td>True</td>\n",
+       "      <th>2016-01</th>\n",
+       "      <td>16543</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>2016-03</td>\n",
-       "      <td>True</td>\n",
+       "      <th>2016-02</th>\n",
+       "      <td>20128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>2016-03</td>\n",
-       "      <td>True</td>\n",
+       "      <th>2016-03</th>\n",
+       "      <td>23357</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>2016-03</td>\n",
-       "      <td>True</td>\n",
+       "      <th>2016-04</th>\n",
+       "      <td>22597</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>2016-03</td>\n",
-       "      <td>True</td>\n",
+       "      <th>2016-05</th>\n",
+       "      <td>23842</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>2016-06</th>\n",
+       "      <td>23651</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>364994</th>\n",
-       "      <td>2016-12</td>\n",
-       "      <td>True</td>\n",
+       "      <th>2016-07</th>\n",
+       "      <td>22329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>364995</th>\n",
-       "      <td>2016-12</td>\n",
-       "      <td>True</td>\n",
+       "      <th>2016-08</th>\n",
+       "      <td>22529</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>364996</th>\n",
-       "      <td>2016-12</td>\n",
-       "      <td>True</td>\n",
+       "      <th>2016-09</th>\n",
+       "      <td>22471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>364997</th>\n",
-       "      <td>2016-12</td>\n",
-       "      <td>True</td>\n",
+       "      <th>2016-10</th>\n",
+       "      <td>23765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>364998</th>\n",
-       "      <td>2017-01</td>\n",
-       "      <td>True</td>\n",
+       "      <th>2016-11</th>\n",
+       "      <td>23352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-12</th>\n",
+       "      <td>24409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01</th>\n",
+       "      <td>1574</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>270547 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           data  vaga_disponivel\n",
-       "56      2016-02             True\n",
-       "57      2016-03             True\n",
-       "58      2016-03             True\n",
-       "59      2016-03             True\n",
-       "60      2016-03             True\n",
-       "...         ...              ...\n",
-       "364994  2016-12             True\n",
-       "364995  2016-12             True\n",
-       "364996  2016-12             True\n",
-       "364997  2016-12             True\n",
-       "364998  2017-01             True\n",
-       "\n",
-       "[270547 rows x 2 columns]"
+       "         vaga_disponivel\n",
+       "data                    \n",
+       "2016-01            16543\n",
+       "2016-02            20128\n",
+       "2016-03            23357\n",
+       "2016-04            22597\n",
+       "2016-05            23842\n",
+       "2016-06            23651\n",
+       "2016-07            22329\n",
+       "2016-08            22529\n",
+       "2016-09            22471\n",
+       "2016-10            23765\n",
+       "2016-11            23352\n",
+       "2016-12            24409\n",
+       "2017-01             1574"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2434,8 +2434,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "e1eb6909",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\raphael.gaias.TACLA\\AppData\\Local\\Temp\\ipykernel_3116\\1900619279.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  moveis_disponiveis['preco'].fillna ('0.0', inplace=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0             0.0\n",
+       "1             0.0\n",
+       "2             0.0\n",
+       "3             0.0\n",
+       "4             0.0\n",
+       "           ...   \n",
+       "364995    $140.00\n",
+       "364996    $140.00\n",
+       "364997    $140.00\n",
+       "364998    $140.00\n",
+       "364999        0.0\n",
+       "Name: preco, Length: 365000, dtype: object"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "moveis_disponiveis['preco'].fillna ('0.0', inplace=True)\n",
+    "moveis_disponiveis['preco']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "6182d878",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moveis_disponiveis['preco'] = moveis_disponiveis['preco'].str.replace ('[\\$\\,]', '', regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "dc0bbee8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moveis_disponiveis['preco'] = moveis_disponiveis['preco'].astype (np.float64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "975ef74f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0           0.0\n",
+       "1           0.0\n",
+       "2           0.0\n",
+       "3           0.0\n",
+       "4           0.0\n",
+       "          ...  \n",
+       "364995    140.0\n",
+       "364996    140.0\n",
+       "364997    140.0\n",
+       "364998    140.0\n",
+       "364999      0.0\n",
+       "Name: preco, Length: 365000, dtype: float64"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "moveis_disponiveis['preco']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27dc22bc",
    "metadata": {},
    "outputs": [],
    "source": []
