adicao do gitignore

--- a/Ciência de Dados/Pandas/limpeza_dados.ipynb
+++ b/Ciência de Dados/Pandas/limpeza_dados.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "id": "de18ac8d",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "id": "89e46a02",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "id": "bf0c40d7",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "[7344 rows x 6 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "id": "9e83abbc",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
        "[7344 rows x 5 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "id": "3ee9ffa9",
    "metadata": {},
    "outputs": [
@@ -598,7 +598,7 @@
        "[7344 rows x 6 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "id": "727b82a1",
    "metadata": {},
    "outputs": [
@@ -19721,7 +19721,7 @@
        " ...]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19735,7 +19735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "id": "99af1770",
    "metadata": {},
    "outputs": [
@@ -20161,7 +20161,7 @@
        "[7344 rows x 21 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20173,7 +20173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "id": "a729a58d",
    "metadata": {},
    "outputs": [
@@ -20218,7 +20218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "id": "f9b8d4ef",
    "metadata": {},
    "outputs": [],
@@ -20228,7 +20228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "id": "7ea10bce",
    "metadata": {},
    "outputs": [],
@@ -20238,7 +20238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "id": "d1a705fd",
    "metadata": {},
    "outputs": [],
@@ -20248,7 +20248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "id": "3759d2a6",
    "metadata": {},
    "outputs": [
@@ -20674,7 +20674,7 @@
        "[11 rows x 21 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20685,7 +20685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "id": "cb824ea4",
    "metadata": {},
    "outputs": [],
@@ -20695,7 +20695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "id": "906083aa",
    "metadata": {},
    "outputs": [
@@ -20720,7 +20720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "id": "5842db8e",
    "metadata": {},
    "outputs": [
@@ -21146,7 +21146,7 @@
        "[226 rows x 21 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21157,7 +21157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "id": "c1a990e7",
    "metadata": {},
    "outputs": [],
@@ -21167,7 +21167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "id": "ed20896f",
    "metadata": {},
    "outputs": [
@@ -21212,7 +21212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "id": "8dc30101",
    "metadata": {},
    "outputs": [],
@@ -21222,7 +21222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "id": "adfb124b",
    "metadata": {},
    "outputs": [
@@ -21648,7 +21648,7 @@
        "[7118 rows x 21 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21659,7 +21659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 20,
    "id": "d975285f",
    "metadata": {},
    "outputs": [
@@ -21669,7 +21669,7 @@
        "np.int64(75)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21680,7 +21680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 21,
    "id": "f4bd17e3",
    "metadata": {},
    "outputs": [],
@@ -21690,7 +21690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 22,
    "id": "80b9b5dd",
    "metadata": {},
    "outputs": [],
@@ -21700,7 +21700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 23,
    "id": "ae579c62",
    "metadata": {},
    "outputs": [
@@ -21710,7 +21710,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21721,7 +21721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 24,
    "id": "ee935a65",
    "metadata": {},
    "outputs": [
@@ -22134,7 +22134,7 @@
        "[7043 rows x 21 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22145,7 +22145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 25,
    "id": "cf9a17de",
    "metadata": {},
    "outputs": [
@@ -23659,7 +23659,7 @@
        "[45 rows x 21 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23670,7 +23670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 26,
    "id": "d87aaf54",
    "metadata": {},
    "outputs": [],
@@ -23680,7 +23680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 27,
    "id": "4e2b6a2a",
    "metadata": {},
    "outputs": [
@@ -23775,7 +23775,7 @@
        "6134                    NaN                  69.05               1958.45"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23786,7 +23786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 28,
    "id": "a49b4d28",
    "metadata": {},
    "outputs": [
@@ -23794,7 +23794,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\raphael.gaias.TACLA\\AppData\\Local\\Temp\\ipykernel_11644\\4277841043.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\raphael.gaias.TACLA\\AppData\\Local\\Temp\\ipykernel_10112\\4277841043.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -23815,7 +23815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 29,
    "id": "58f3cf2e",
    "metadata": {},
    "outputs": [
@@ -23910,7 +23910,7 @@
        "6134                   29.0                  69.05               1958.45"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23921,7 +23921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 30,
    "id": "ca0607db",
    "metadata": {},
    "outputs": [],
@@ -23931,7 +23931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 31,
    "id": "11d52e74",
    "metadata": {},
    "outputs": [
@@ -23941,7 +23941,7 @@
        "np.int64(37)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23952,7 +23952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 32,
    "id": "ec62b234",
    "metadata": {},
    "outputs": [
@@ -24378,7 +24378,7 @@
        "[7006 rows x 21 columns]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24389,7 +24389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 33,
    "id": "ee8ded72",
    "metadata": {},
    "outputs": [],
@@ -24399,7 +24399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 34,
    "id": "1d1c8445",
    "metadata": {},
    "outputs": [
@@ -24626,13 +24626,21 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_sem_nulo.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92b7c8ca",
+   "metadata": {},
+   "source": [
+    "DESAFIO"
    ]
   },
   {
